Add Bearer in /sub
